# claude-prism

./: .gitignore  CONTRIBUTING.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  biome.json  package.json  pnpm-lock.yaml
.github/workflows/: build-desktop.yml  covector-version-or-publish.yml  lint.yml
apps/desktop/: package.json  tsconfig.tsbuildinfo
apps/desktop-sidecar/: package.json
apps/desktop/public/examples/poster-academic/: main.tex
apps/desktop/scripts/: generate-previews.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: claude.rs  history.rs  latex.rs  lib.rs  skills.rs  slash_commands.rs  uv.rs
apps/desktop/src/__tests__/lib/: app-zoom.test.ts  tauri-fs.test.ts
apps/desktop/src/__tests__/mocks/: tauri.ts
apps/desktop/src/__tests__/stores/: document-store.test.ts
apps/desktop/src/components/: claude-setup.tsx  error-boundary.tsx  project-picker.tsx  project-wizard.tsx  uv-setup.tsx
apps/desktop/src/components/claude-chat/: chat-composer.tsx  chat-messages.tsx  claude-chat-drawer.tsx  slash-command-picker.tsx  (+1 more)
apps/desktop/src/hooks/: use-claude-events.ts  use-keyboard-shortcuts.ts
apps/desktop/src/lib/: app-zoom.ts  template-preview-cache.ts  template-registry.ts
apps/desktop/src/stores/: claude-chat-store.ts  claude-setup-store.ts  document-store.ts  project-store.ts  template-store.ts  ui-preferences-store.ts  uv-setup-store.ts  zotero-store.ts
apps/desktop/src/styles/: globals.css
(+22 files in other folders)
